--- a/angular-listadeseos/angular.json
+++ b/angular-listadeseos/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-hola-mundo": {
+    "angular-listadeseos": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-hola-mundo",
+            "outputPath": "dist/angular-listadeseos",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-hola-mundo:build"
+            "browserTarget": "angular-listadeseos:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-hola-mundo:build:production"
+              "browserTarget": "angular-listadeseos:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-hola-mundo:build"
+            "browserTarget": "angular-listadeseos:build"
           }
         },
         "test": {
@@ -110,19 +110,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-hola-mundo:serve"
+            "devServerTarget": "angular-listadeseos:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-hola-mundo:serve:production"
+              "devServerTarget": "angular-listadeseos:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "angular-hola-mundo",
+  "defaultProject": "angular-listadeseos",
   "cli": {
-    "analytics": "c83fa87f-d592-4b42-a59c-4bcf24ef6e2f"
+    "analytics": "a226cd79-cbbf-4e97-9869-93fca2422e22"
   }
 }
