--- a/angular-whishlist/angular.json
+++ b/angular-whishlist/angular.json
@@ -3,9 +3,13 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-hola-mundo": {
+    "angular-whishlist": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-hola-mundo",
+            "outputPath": "dist/angular-whishlist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -62,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-hola-mundo:build"
+            "browserTarget": "angular-whishlist:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-hola-mundo:build:production"
+              "browserTarget": "angular-whishlist:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-hola-mundo:build"
+            "browserTarget": "angular-whishlist:build"
           }
         },
         "test": {
@@ -88,7 +92,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -110,19 +114,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-hola-mundo:serve"
+            "devServerTarget": "angular-whishlist:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-hola-mundo:serve:production"
+              "devServerTarget": "angular-whishlist:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "angular-hola-mundo",
+  "defaultProject": "angular-whishlist",
   "cli": {
-    "analytics": "c83fa87f-d592-4b42-a59c-4bcf24ef6e2f"
+    "analytics": "7ee35549-d95d-4fa4-8267-f9914b19c3a8"
   }
 }
